<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AppBar"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/toolbar">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/CollabToolBar"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/scrim">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/aldrich"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:transitionName="text_tran"/>
                    <ImageView
                        android:id="@+id/imgBuy"
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="120dp"
                        app:srcCompat="@drawable/ic_cart_black"
                        android:transitionName="img_tran"/>
                    <ImageView
                        android:id="@+id/imgSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:srcCompat="@drawable/ic_account_settings"
                        android:transitionName="img_tran"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtDes"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/description"
                    android:transitionName="text_tran"/>

                <EditText
                    android:id="@+id/edt_search"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/search_bg"
                    android:drawableLeft="@drawable/ic_search_black_24dp"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/hint_search"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:transitionName="text_tran"/>
            </LinearLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/discount_item"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:transitionName="text_tran"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp"
                android:transitionName="card_tran">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:transitionName="layout_tran">
                <TextView
                    android:id="@+id/txtCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/aldrich"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:transitionName="text_tran"/>
                <ImageButton
                    android:id="@+id/btnCategory"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/category"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="180dp"
                    android:transitionName="img_tran"/>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_cate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp"
                android:transitionName="card_tran">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txt_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/recently"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:transitionName="text_tran"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp"
                android:transitionName="card_tran">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_recently"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>